--- a/src/htmlcss/sobre.html
+++ b/src/htmlcss/sobre.html
@@ -4,74 +4,39 @@
 <head>
 	<title>Projeto CRESCER CWI</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="estilo.css"> 
 </head>
 
-<body style="background: url(streetfighter.jpg) no-repeat;
-             background-size: 100% 50%;font-family: arial;
-             margin: auto 242px;">
+<body>
 
-	<div style="
-                 background-color: rgba(125, 121, 121, 0.4);
-                 border-color: rgba(125, 121, 121, 0.4);
-                 border-width: 9px;
-                 margin: 346px auto 50px auto;
-                 padding: 10px;
-                 padding-left: 240px;
-                 border-radius: 53px;
-                 ">
-		<table>
-			<tr>
-				<td><font color="white">
-					<a href="#index.html">
-						<h5>Inicio</h5>
-					</a>
-                </font>    
-				</td>
-				<td>
-					<a href="https://www.google.com.br/search?client=opera&q=Mc+Marechal+%7C%7C+Griot&sourceid=opera&ie=UTF-8&oe=UTF-8#q=street+fighter&tbm=nws">
-						<h5>Notícias</h5>
-					</a>
-				</td>
-				<td>
-					<a href="#ficha-tecnica.html">
-						<h5>Ficha Tecnica</h5>
-					</a>
-				</td>
-				<td>
-					<a href="#sobre.html">
-						<h5>Sobre</h5>
-					</a>
-				</td>
-
-			</tr>
-		</table>
-
-	</div>
+		 <div class="menu"> 
+            <span class="links"> 
+                <a href="index.html">Inicio</a> 
+            </span> 
+            <span class="links"> 
+                <a href="https://www.google.com.br/search?q=Street+Fighter&tbm=nws">Noticia</a> 
+            </span> 
+            <span class="links"> 
+                <a href="ficha-tecnica.html">Ficha Técnica</a> 
+            </span> 
+            <span class="links"> 
+                <a href="sobre.html">Sobre</a> 
+            </span> 
+        </div> 
 
 
-
-	<div style=" 
-                 margin: 0px auto;
-                 background-color: rgb(125, 121, 121);
-                 border: 4px solid rgb(125, 121, 121);
-                 color: rgb(218, 213, 213);" <h1>
+	<div class="titulo">
 		<h1>
 			<strong>Ficha Técnica</strong>
 		</h1>
 	</div>
-	<div style="                             
-                 margin: 0px auto;
-                 background-color: rgb(212, 209, 209);
-                 border-color: rgb(212, 209, 209);
-                 border-width: 9px;
-                 border-style: solid;
-                 ">
+	<div id="resto">
 		<div>
 			<h2>
 				<strong>Henrique Ostermann</strong>
 			</h2>
 		</div>
-    	<div style="width: 200px; display: inline-block; margin-right: 5px; margin-left: 5px;">
+    	<div id="imagem">
     		<img src="blanka.jpg" alt="blanka tenebroso" style="height: 355px; margin-bottom: 46px;">
     	</div>
     	<div style="width: 400px;display: inline-block; margin-left: 70px;">	
