feat(streetFighter): exercicios

--- a/src/htmlcss/sobre.html
+++ b/src/htmlcss/sobre.html
@@ -42,8 +42,8 @@
     	<div style="width: 400px;display: inline-block; margin-left: 70px;">	
     			<strong>Primeira aparição:</strong>Hospital de Taquara <br>
 				<strong>Nascimento: </strong>11 de Novembro de 1990. <br>
-				<strongb>Altura:</strong> 196cm. <br>
-				<strongb>Peso:</strong> 100kg ++. <br>
+				<strong>Altura:</strong> 196cm. <br>
+				<strong>Peso:</strong> 100kg ++. <br>
 				<strong>Medidas:</strong>não faço ideia<br> 
 				<strong>Tipo sanguíneo:</strong> O+ <br>
 				<strong>Habilidades especiais:</strong> Comer, Dormir, ver séries. (não nessa ordem) <br>
