--- a/src/modulo-09-java/Locadora/src/main/webapp/index.xhtml
+++ b/src/modulo-09-java/Locadora/src/main/webapp/index.xhtml
@@ -11,26 +11,56 @@
     <ui:define name="form">
 
         <div class="form-group"> 
-            <h:outputLabel for="nome" value="#{bundle.pessoa_nome}"></h:outputLabel>
-            <h:inputText id="nome" value="#{hello.pessoa.nmPessoa}" styleClass="form-control"/>
+            <h:outputLabel for="nome" value="#{bundle.filme_nome}"></h:outputLabel>
+            <h:inputText id="nome" value="#{filmeManager.filme.nomeFilme}" styleClass="form-control"/>
         </div>
 
-        <h:commandButton type="submit" value="Enviar" styleClass="btn btn-success" action="#{hello.adicionar}">    
+        <h:commandButton type="submit" value="Enviar" styleClass="btn btn-success" action="#{filmeManager.adicionar()}">    
             <f:ajax execute="@form" render="@form" />
         </h:commandButton>
 
-        <h:dataTable id="pessoas" value="#{hello.pessoas}" var="pessoa" styleClass="table table-hover">
+        <h:dataTable id="filmes" value="#{filmeManager.filmes}" var="filme" styleClass="table table-hover">
             <h:column>
                 <f:facet name="header">
-                    <h:outputText value="#{bundle.pessoa_id}"/>
+                    <h:outputText value="#{bundle.filme_nome}"/>
                 </f:facet>
-                <h:outputText value="#{pessoa.idPessoa}"/>
+                <h:outputText value="#{filme.nomeFilme}"/>
             </h:column>
             <h:column>
                 <f:facet name="header">
-                    <h:outputText value="#{bundle.pessoa_nome}"/>
+                    <h:outputText value="#{bundle.filme_genero}"/>
                 </f:facet>
-                <h:outputText value="#{pessoa.nmPessoa}"/>
+                <h:outputText value="#{filme.genero}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="#{bundle.filme_diretor}"/>
+                </f:facet>
+                <h:outputText value="#{filme.diretorFilme}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="#{bundle.filme_dt_lancamento}"/>
+                </f:facet>
+                <h:outputText value="#{filme.dtLancamento}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="#{bundle.filme_elenco}"/>
+                </f:facet>
+                <h:outputText value="#{filme.elenco}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="#{bundle.filme_classificacao}"/>
+                </f:facet>
+                <h:outputText value="#{filme.classificacao}"/>
+            </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="#{bundle.filme_idioma}"/>
+                </f:facet>
+                <h:outputText value="#{filme.idioma}"/>
             </h:column>
 
         </h:dataTable>
