--- a/src/modulo-09-java/Locadora/src/main/webapp/index.xhtml
+++ b/src/modulo-09-java/Locadora/src/main/webapp/index.xhtml
@@ -13,81 +13,19 @@
                <f:selectItems value="#{cadastroFilme.opcoesGenero}" var="g" itemLabel="#{g.descricao}" itemValue="#{g}"/>
            </h:selectOneMenu>-->
         <div class="form-group"> 
-            <h:outputLabel for="nome" value="#{bundle.filme_nome}"></h:outputLabel>
-            <h:inputText id="nome" value="#{filmeManager.filme.nomeFilme}" styleClass="form-control"/>
+            <h:outputLabel for="nome" value="#{bundle.genero_nome}"></h:outputLabel>
+            <h:inputText id="nome" value="#{generoManager.genero.nomeGenero}" styleClass="form-control"/>
         </div>
-        <div class="form-group"> 
-            <h:outputLabel for="genero" value="#{bundle.filme_genero}"></h:outputLabel>
-            <h:inputText id="genero" value="#{filmeManager.filme.genero}" styleClass="form-control"/>
-        </div>
-        <div class="form-group"> 
-            <h:outputLabel for="diretor" value="#{bundle.filme_diretor}"></h:outputLabel>
-            <h:inputText id="diretor" value="#{filmeManager.filme.diretorFilme}" styleClass="form-control"/>
-        </div>
-        <div class="form-group"> 
-            <h:outputLabel for="dtLancamento" value="#{bundle.filme_dt_lancamento}"></h:outputLabel>
-            <h:inputText id="dtLancamento" value="#{filmeManager.filme.dtLancamento}" styleClass="form-control"/>
-        </div>
-        <div class="form-group"> 
-            <h:outputLabel for="elenco" value="#{bundle.filme_elenco}"></h:outputLabel>
-            <h:inputText id="elenco" value="#{filmeManager.filme.elenco}" styleClass="form-control"/>
-        </div>
-
-        <div class="form-group"> 
-            <h:outputLabel for="classificacao" value="#{bundle.filme_classificacao}"></h:outputLabel>
-            <h:inputText id="classificacao" value="#{filmeManager.filme.classificacao}" styleClass="form-control"/>
-        </div>
-        <div class="form-group"> 
-            <h:outputLabel for="idioma" value="#{bundle.filme_idioma}"></h:outputLabel>
-            <h:inputText id="idioma" value="#{filmeManager.filme.idioma}" styleClass="form-control"/>
-        </div>
-
-        <h:commandButton type="submit" value="Enviar" styleClass="btn btn-success" action="#{filmeManager.adicionar()}">    
+        <h:commandButton type="submit" value="Enviar" styleClass="btn btn-success" action="#{generoManager.adicionar()}">    
             <f:ajax execute="@form" render="@form" />
         </h:commandButton>
 
-        <h:dataTable id="filmes" value="#{filmeManager.filmes}" var="filme" styleClass="table table-hover">
+        <h:dataTable id="generos" value="#{generoManager.generos}" var="filme" styleClass="table table-hover">
             <h:column>
                 <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_nome}"/>
+                    <h:outputText value="#{bundle.genero_nome}"/>
                 </f:facet>
-                <h:outputText value="#{filme.nomeFilme}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_genero}"/>
-                </f:facet>
-                <h:outputText value="#{filme.genero}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_diretor}"/>
-                </f:facet>
-                <h:outputText value="#{filme.diretorFilme}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_dt_lancamento}"/>
-                </f:facet>
-                <h:outputText value="#{filme.dtLancamento}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_elenco}"/>
-                </f:facet>
-                <h:outputText value="#{filme.elenco}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_classificacao}"/>
-                </f:facet>
-                <h:outputText value="#{filme.classificacao}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="#{bundle.filme_idioma}"/>
-                </f:facet>
-                <h:outputText value="#{filme.idioma}"/>
+                <h:outputText value="#{genero.nomeGenero}"/>
             </h:column>
 
         </h:dataTable>
